objects/ASI_FOC_Free_Goods_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_FOC_Sys_Item_Count__c</fullName>
        <label>Sys_Item_Count</label>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_To_Regional_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>POP CENTRAL
POP E-COMMERCE
POP EAST
POP HEADQUARTER
POP IHBR
POP NORTH
POP NORTH WEST
POP SOUTH
POP SOUTH WEST</inlineHelpText>
        <label>To Regional Warehouse</label>
        <referenceTo>ASI_FOC_Warehouse__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Total_List_Price_With_Tax__c</fullName>
        <label>Total List Price(With Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Trade_A_P_PO_Number__c</fullName>
        <label>Trade A&amp;P PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Urgent_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Saving_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Saving Purpose</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Expense_Control_Form__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Tax Saving Control Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Expense_Control_Form__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Free Goods Request &amp; POSM</label>
    <listViews>
        <fullName>ASI_CRM_SG_All_SG_FOC</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_JDE_SO_Number__c</columns>
        <columns>ASI_CRM_SG_System_Generated__c</columns>
        <columns>ASI_CRM_SG_Year__c</columns>
        <columns>ASI_CRM_SG_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_SG_FOC,ASI_FOC_Free_Goods_Request__c.ASI_CRM_SG_FOC_Read_Only</value>
        </filters>
        <label>All SG Free Goods Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_POSM</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_CRM_JDE_SO_Number__c</columns>
        <columns>ASI_FOC_JDE_Order_Type_Code__c</columns>
        <columns>ASI_CRM_SG_Delivery_Instructions__c</columns>
        <columns>ASI_CRM_SG_Delivery_Address__c</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_CRM_Sync_to_JDE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_SG_POSM,ASI_FOC_Free_Goods_Request__c.ASI_CRM_SG_POSM_Read_Only</value>
        </filters>
        <label>All SG POSM</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_SG_Today_s_Free_Goods_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_SG_Year__c</columns>
        <columns>ASI_CRM_SG_Month__c</columns>
        <columns>ASI_CRM_JDE_SO_Number__c</columns>
        <columns>ASI_CRM_SG_Delivery_Instructions__c</columns>
        <columns>ASI_CRM_SG_Delivery_Address__c</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_SG_FOC</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Free Goods Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Approved_FOC_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_CRM_Reference_No__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_CRM_Plan__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_FOC_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_FOC_Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>TW Approved FOC Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Approved_POSM_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_CRM_Reference_No__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_CRM_Plan__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_POSM_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_FOC_Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>TW Approved POSM Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_FOC_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Department__c</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_FOC_Date_of_Delivery__c</columns>
        <columns>ASI_CRM_Plan__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_No_of_Detail_Line__c</columns>
        <columns>ASI_CRM_FOC_Amount__c</columns>
        <columns>ASI_FOC_SYS_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_FOC_Request,ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_FOC_Request_Read_Only</value>
        </filters>
        <label>TW FOC Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Final_FOC_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_CRM_Reference_No__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_CRM_Plan__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_FOC_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_FOC_Request_Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <label>TW Final FOC Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Final_POSM_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_CRM_Reference_No__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_CRM_Plan__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_POSM_Request_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_FOC_Request_Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <label>TW Final POSM Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_POSM_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_CRM_Requester__c</columns>
        <columns>ASI_FOC_Date_of_Delivery__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_No_of_Detail_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_POSM_Request,ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_POSM_Request_Read_Only</value>
        </filters>
        <label>TW POSM Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Submitted_FOC_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Department__c</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_FOC_Date_of_Delivery__c</columns>
        <columns>ASI_CRM_Plan__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_No_of_Detail_Line__c</columns>
        <columns>ASI_CRM_FOC_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_FOC_Request_Read_Only,ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_FOC_Request</value>
        </filters>
        <filters>
            <field>ASI_FOC_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>TW Submitted FOC Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Submitted_POSM_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Department__c</columns>
        <columns>ASI_CRM_SG_Order_Date__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_FOC_Date_of_Delivery__c</columns>
        <columns>ASI_CRM_Plan__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_CRM_No_of_Detail_Line__c</columns>
        <columns>ASI_CRM_FOC_Amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_POSM_Request_Read_Only,ASI_FOC_Free_Goods_Request__c.ASI_CRM_TW_POSM_Request</value>
        </filters>
        <filters>
            <field>ASI_FOC_Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>TW Submitted POSM Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_FOC_APPROVED_HK</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_Account_DA__c</columns>
        <columns>ASI_FOC_Purpose__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_FOC_Request_Type__c</columns>
        <columns>ASI_FOC_MFM_Consumer_AP_PO_Number__c</columns>
        <columns>ASI_FOC_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_FOC_Request_Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <filters>
            <field>ASI_FOC_SYS_Approved_by_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_FOC_HK_Free_Goods_Request_Approval,ASI_FOC_Free_Goods_Request__c.ASI_FOC_HK_Free_Goods_Request_Sales_Admin</value>
        </filters>
        <label>My Approved Free Goods Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_FOC_HK_All_Free_Goods_Request</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_FOC_Account_DA__c</columns>
        <columns>ASI_FOC_Purpose__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_FOC_Request_Type__c</columns>
        <columns>ASI_FOC_MFM_Consumer_AP_PO_Number__c</columns>
        <columns>ASI_FOC_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_FOC_HK_Free_Goods_Request_Approval,ASI_FOC_Free_Goods_Request__c.ASI_FOC_HK_Free_Goods_Request_Sales</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_FOC_HK_Free_Goods_Request_Sales_Admin</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_FOC_HK_Free_Goods_Request_Approval</value>
        </filters>
        <label>All Free Goods Request - HK</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_FOC_HK_My_Free_Goods_Request_Orders</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_Account_DA__c</columns>
        <columns>ASI_FOC_Purpose__c</columns>
        <columns>ASI_FOC_Request_Status__c</columns>
        <columns>ASI_FOC_Request_Type__c</columns>
        <columns>ASI_FOC_MFM_Consumer_AP_PO_Number__c</columns>
        <columns>ASI_FOC_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Free Goods Request Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_FOC_MY_All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Contract__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_FOC_Description__c</columns>
        <columns>ASI_CRM_Outlet_Invoice_Number__c</columns>
        <columns>ASI_CRM_JDE_SO_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Free_Goods_Request__c.ASI_FOC_MY_FreeGoodsRequest,ASI_FOC_Free_Goods_Request__c.ASI_FOC_MY_FreeGoodsRequest_Read_Only</value>
        </filters>
        <label>All MY Free Goods Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FG-{00000000}</displayFormat>
        <label>Request Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Free Goods Request &amp; POSM</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_FOC</fullName>
        <active>true</active>
        <description>For SG CRM</description>
        <label>SG FOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_FOC_Read_Only</fullName>
        <active>true</active>
        <label>SG FOC Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_POSM</fullName>
        <active>true</active>
        <description>For SG CRM</description>
        <label>SG POSM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_POSM_Read_Only</fullName>
        <active>true</active>
        <label>SG POSM Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_FOC_Request</fullName>
        <active>true</active>
        <label>ASI CRM TW FOC Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_FOC_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM TW FOC Request Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_POSM_Request</fullName>
        <active>true</active>
        <label>ASI CRM TW POSM Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_POSM_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM TW POSM Request Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_Free_Goods_Request</fullName>
        <active>true</active>
        <description>used by FOC</description>
        <label>CN FOC Free Goods Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_Free_Goods_Request_Read_Only</fullName>
        <active>true</active>
        <label>CN FOC Free Goods Request Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_POSM</fullName>
        <active>true</active>
        <label>CN POSM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_POSM_Read_Only</fullName>
        <active>true</active>
        <label>CN POSM Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_Request_and_Items_Read_Only</fullName>
        <active>true</active>
        <label>CN FOC Request and Items Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_HK_Free_Goods_Request_Approval</fullName>
        <active>true</active>
        <label>HK FOC Free Goods Request (Approval)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_HK_Free_Goods_Request_Sales</fullName>
        <active>true</active>
        <label>HK FOC Free Goods Request (Sales)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_HK_Free_Goods_Request_Sales_Admin</fullName>
        <active>true</active>
        <label>HK FOC Free Goods Request (Sales Admin)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_MY_FreeGoodsRequest</fullName>
        <active>true</active>
        <description>MY FIS</description>
        <label>MY FOC Free Goods Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_MY_FreeGoodsRequest_Read_Only</fullName>
        <active>true</active>
        <label>MY FOC Free Goods Request Read-Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MY_CreateChecking</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$User.BypassVR__c != TRUE,
CONTAINS(RecordType.DeveloperName,&apos;ASI_FOC_MY&apos;),
OR(
TEXT(ASI_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) != &apos;Final&apos;,
ASI_CRM_Contract__r.ASI_CRM_Terminate__c == TRUE,
ASI_CRM_Contract__r.ASI_CRM_Obsolete_Version__c == TRUE
),
ISNEW() 
)</errorConditionFormula>
        <errorMessage>Only FINAL contract is allowed to create Free Good Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_Block_FOC_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
  CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_SG&apos;),
  ASI_CRM_Outlet__r.ASI_CRM_CN_Inactive_Flag__c 
)</errorConditionFormula>
        <errorMessage>You cannot create new FOC/POSM requests for an inactive outlet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_Contract_Completed_Validation</fullName>
        <active>true</active>
        <description>SG CRM: Not allow users to create FOC if contract status = &quot;Completed&quot;

Wilken 20161220: Updated to check when IsNew to avoid ETL error when changing Outlet owner for completed contract</description>
        <errorConditionFormula>AND ( 
CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_SG&quot;),
 ISNEW() , 
CONTAINS( ASI_CRM_Contract__r.RecordType.DeveloperName , &quot;ASI_CRM_SG&quot;), 
ISPICKVAL(ASI_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c, &quot;Completed&quot;) 
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Contract__c</errorDisplayField>
        <errorMessage>Since the contract is completed, you are not allowed to create FOC request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_Contract_Validation</fullName>
        <active>false</active>
        <description>Wilken 20161220: Updated to skip checking if changing Owner, to avoid ETL error when Outlet owner is changed</description>
        <errorConditionFormula>AND( 
    CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_SG&quot;), 
    NOT(ISPICKVAL(ASI_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c, &apos;Contract Approved&apos;)),
    NOT(ASI_CRM_Contract__r.ASI_CRM_Revising__c),
NOT(ISCHANGED( OwnerId ))
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Contract__c</errorDisplayField>
        <errorMessage>FOC request can only be created on approved Contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_FOC_AdvertisingSpot</fullName>
        <active>true</active>
        <description>Ensure for Advertising Spot FOC, all items are of same type</description>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_SG_FOC&quot;),
 ISPICKVAL( ASI_FOC_Request_Status__c , &quot;Draft&quot;) ,
 ASI_CRM_SG_Has_Advertising_Spot__c &gt;= 1,
 ASI_CRM_SG_Has_Advertising_Spot__c !=  ASI_FOC_Sys_Item_Count__c
)</errorConditionFormula>
        <errorMessage>For Advertising Spot FOC, please ensure all items are of the same Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_CN_PO_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( ASI_FOC_Request_Type__c , &quot;Consumer A&amp;P&quot;),
 CONTAINS( RecordType.DeveloperName , &quot;ASI_FOC_CN&quot;), 
NOT( CONTAINS( $Profile.Name , &quot;Administrator&quot;)),
NOT(ASI_FOC_PO__r.ASI_FOC_Valid_for_FOC__c) 
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_PO__c</errorDisplayField>
        <errorMessage>Please select Consumer A&amp;P PO of current and future fiscal year only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_Delivery_Date_less_than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   AND( 
      OR(CONTAINS($RecordType.DeveloperName, &apos;ASI_FOC_CN_&apos;), 
         CONTAINS($RecordType.DeveloperName, &apos;ASI_FOC_HK_&apos;)
      ),
      NOT(CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_SG_&apos;)), 
      NOT(CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_MY_&apos;))
   ),
   AND(ISNEW(), ASI_FOC_Date_of_Delivery__c &lt; TODAY())
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Date_of_Delivery__c</errorDisplayField>
        <errorMessage>Please enter a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_FOC_Exceed_PO_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
	TEXT(ASI_FOC_Request_Status__c)&lt;&gt; &quot;Cancelled&quot;,
	TEXT(ASI_FOC_Request_Type__c)&lt;&gt; &quot;Return&quot;,
	ASI_FOC_PO__r.ASI_FOC_PO_Remaining_Amount__c &lt; 0,
	NOT(CONTAINS($Profile.Name , &quot;Admin&quot;)) 
)</errorConditionFormula>
        <errorMessage>Request order over PO remaining amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Attention_Length_Validation</fullName>
        <active>true</active>
        <description>Maximum length of Attention is 16 characters.</description>
        <errorConditionFormula>AND 
( CONTAINS( RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;), 
LEN( ASI_FOC_Attention__c ) &gt; 16
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Attention__c</errorDisplayField>
        <errorMessage>Maximum length of Attention is 16 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_CompChop_Duplicate_Validaiton</fullName>
        <active>true</active>
        <description>Cannot select both &quot;Company Chop Required&quot; and &quot;No Company Chop Acceptable&quot;</description>
        <errorConditionFormula>AND 
(  CONTAINS( RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;),
 ASI_FOC_Company_Chop_Required__c,
 ASI_FOC_No_Company_Chop_Acceptable__c 
)</errorConditionFormula>
        <errorMessage>Cannot select both &quot;Company Chop Required&quot; and &quot;No Company Chop Acceptable&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Company_Chop_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( CONTAINS( RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;), 
 ASI_FOC_No_Company_Chop_Acceptable__c ,
 ISBLANK( ASI_FOC_Others_Please_specify__c ) 
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Others_Please_specify__c</errorDisplayField>
        <errorMessage>Please input other company chop</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Customer_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;),
	ISCHANGED( ASI_FOC_Account_DA__c) ,
	ASI_FOC_Sys_Item_Count__c &gt; 0
)</errorConditionFormula>
        <errorMessage>Please clear Request Item before changing Customer (DA)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_DeliveryRemark_Validation</fullName>
        <active>true</active>
        <description>Maximum length of Delivery Remark is 100 characters.</description>
        <errorConditionFormula>AND 
( CONTAINS( RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;), 
LEN( ASI_FOC_Delivery_Remarks__c ) &gt; 100
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Delivery_Remarks__c</errorDisplayField>
        <errorMessage>Maximum length of Delivery Remark is 100 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Delivery_Address_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
	CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;),
	ISBLANK(ASI_FOC_Reason_for_Address_Change__c),
	NOT(ISBLANK(ASI_FOC_Alternate_Delivery_Address_Floor__c))
)</errorConditionFormula>
        <errorMessage>You must fill in &quot;Reason for Address Change&quot; if you change the Delivery Address!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Delivery_Date_Validation</fullName>
        <active>true</active>
        <description>Delivery Date no more than 14 days after Order Date</description>
        <errorConditionFormula>AND(
 CONTAINS( RecordType.DeveloperName , &quot;ASI_FOC_HK&quot;),
( ASI_FOC_Date_of_Delivery__c -  today() &gt;14)
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Date_of_Delivery__c</errorDisplayField>
        <errorMessage>Delivery Date can be no more than 14 days after today!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Delivery_Date_is_Today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;),
OR(ISNEW(),ISCHANGED( ASI_FOC_Date_of_Delivery__c )),
ASI_FOC_Date_of_Delivery__c = TODAY(),
NOT( ASI_FOC_Urgent_Order__c )
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Date_of_Delivery__c</errorDisplayField>
        <errorMessage>Only urgent orders can be delivered on the same day!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Delivery_Window_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
	NOT(ISPICKVAL(ASI_FOC_Delivery_Window_Instruction__c,&quot;Between&quot;)),
	NOT(ISPICKVAL(ASI_FOC_Delivery_Time_2__c,&quot;&quot;))
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Delivery_Time_2__c</errorDisplayField>
        <errorMessage>Please leave Delivery Time 2 empty if Delivery Window Instruction is Before or After</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_FOC_PO_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	CONTAINS(RecordType.DeveloperName , &quot;ASI_FOC_HK&quot;), 
	NOT(CONTAINS( $Profile.Name , &quot;Administrator&quot;)), 
	OR (
		NOT(ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_Is_FOC_PO__c), 
		OR (ISPICKVAL(ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_Status__c, &quot;Draft&quot;), ISPICKVAL(ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_Status__c, &quot;Submitted&quot;)),
		ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_Net_off_FOC_PO__c,
		ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_FOC_PO_Remaining_Amount__c &lt; 0,
(ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_PO_Amount__c-ASI_FOC_MFM_Consumer_AP_PO_Number__r.ASI_MFM_Invoice_Amount_from_JDE__c )&lt;0
	)
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_MFM_Consumer_AP_PO_Number__c</errorDisplayField>
        <errorMessage>Please select FOC PO with available PO remaining amount for issing FOC.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_OtherSpecify_Validation</fullName>
        <active>true</active>
        <description>Maximum length of Others, Please Specify is 30 characters.</description>
        <errorConditionFormula>AND 
( CONTAINS( RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;), 
LEN(  ASI_FOC_Others_Please_specify__c ) &gt; 30
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_Others_Please_specify__c</errorDisplayField>
        <errorMessage>Maximum length of Others, Please Specify is 30 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_PO_Required</fullName>
        <active>true</active>
        <description>For HK FOC Only: Validate all HK FOC need to select MFM PO
Added exception for Admin on 2016-07-05 because historical FOC has empty PO Number</description>
        <errorConditionFormula>AND (
	CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;),
NOT(CONTAINS( $Profile.Name , &quot;Administrator&quot;)) ,
ISBLANK(ASI_FOC_MFM_Consumer_AP_PO_Number__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_FOC_MFM_Consumer_AP_PO_Number__c</errorDisplayField>
        <errorMessage>Please select PO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_FOC_HK_Request_Type_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_HK&quot;),
	ISCHANGED(ASI_FOC_Request_Type__c) ,
	ASI_FOC_Sys_Item_Count__c &gt; 0
)</errorConditionFormula>
        <errorMessage>Please clear Request Item before changing Request Type</errorMessage>
    </validationRules>
</CustomObject>